--- a/pages/nsc418/n12538429.md
+++ b/pages/nsc418/n12538429.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【大选更新11.10】美十州检察长挑战宾州" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229557210-600x400.jpg"/>
 <div class="caption">
- 图为11月9日，白宫新闻秘书麦肯纳尼（左）与共和党全国委员会（RNC）主席罗娜·麦克丹尼尔（Ronna McDaniel，右）在共和党全国委员会总部举行的新闻发布会上。(Samuel Corum/Getty Images)
+ 11月9日，白宫新闻秘书麦肯纳尼（左）与共和党全国委员会（RNC）主席罗娜‧麦克丹尼尔（Ronna McDaniel，右）在共和党全国委员会总部举行的新闻发布会上。(Samuel Corum/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
