--- a/pages/p5/952237.md
+++ b/pages/p5/952237.md
@@ -1,4 +1,4 @@
-### 纵欲 正在腐蚀中国下一代(组图)(组图)
+### 债务压力恶化 中国经济和金融遭受双重掣肘(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,18 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="放纵食欲，容易患上消化系统疾病。" src="https://img3.secretchina.com/pic/2020/7-8/p2727782a421631450-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="经济 金融 CPI" src="https://img3.secretchina.com/pic/2020/1-24/p2610921a138226387-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   在
-   <strong>
-    中国
-   </strong>
-   ，
-   <strong>
-    纵欲
-   </strong>
-   已经成为整个社会的常态。（以下图片来源皆为：Adobe stock)
+   债务无法稀释，内债压力恶化。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,52 +21,48 @@
 
 ---
 
-#### [ 🎬  《红墙的记忆》- 4.25中南海万人和平上访纪实](http://141.164.39.94:10000/videos/legend/425.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  《永恒的五十分钟》（长春电视插播事件改编） ](http://141.164.39.94:10000/videos/news/ComingForYou-2.html)
-
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/) &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html)
-
-#### [ 💥 李锐评习近平：没想到文化程度这么低（李锐是毛泽东秘书、习仲勋挚友、前中组部副部长）](http://141.164.39.94:10000/videos/res/Communist/lirui-xi.html)
-
-#### [ 💥 江泽民失态怒斥并威胁香港记者（ “图样图森破”，“谈笑风生” ）](http://141.164.39.94:10000/videos/res/realjzm/naive.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  在
-  <span href="https://www.secretchina.com/news/gb/tag/中国" target="_blank">
-   中国
+  【看中国2020年11月12日讯】中国国家统计局发布10月份
+  <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
+   经济
   </span>
-  ，纵欲已经成为整个社会的常态，但这样的行为，却是在毁灭下一代！这样的毁灭来自于方方面面，从超前消费的渴求，对手机的欲罢不能，对垃圾食品的过量摄入，以及性观念的开放……等。
+  数据，10月中国
+  <strong>
+   CPI
+  </strong>
+  同比上涨0.5%，创11年新低；10月中国CPI环比下跌0.3%，略有下降。全国工业生产者出厂价格（PPI）同比下降2.1%，环比为0。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  而归根究底，这些摧毁年轻人的，实际上是中国这个大环境的沉沦，致使他们盲目的追求欲望。
+  从环比来看，PPI平稳，而
+  <span href="https://www.secretchina.com/news/gb/tag/CPI" target="_blank">
+   CPI
+  </span>
+  下跌，或喻示部分通胀因素被工厂（产能过剩恶性竞争）消化。
+ </p>
+ <p>
+  从同比来看，CPI创逾10年新低，喻示债务无法稀释，内债压力恶化。
  </p>
  <p>
   <strong>
-   1、放纵
-   <span href="https://www.secretchina.com/news/gb/tag/食欲" target="_blank">
-    食欲
-   </span>
-   ：想吃就猛吃，不想吃就不吃
+   01 CPI同比大跌而环比微降
   </strong>
  </p>
  <p>
-  例如在忙碌加班时，一口饭也顾不上吃，好不容易在周末假日休息时，反而拉上三五好友，奔向餐厅，吃吃喝喝个痛快！
+  原因：1）人民币持续几个月升值，猪肉等农产品进口量翻倍增长，输入性通缩因素会压制了价格上行，升值趋势延续与CPI环比下降0.3%较为匹配。
  </p>
  <p>
-  在医院里，医生总是可以遇见许多因为暴饮暴食导致疾病的病人。其中有一个连吃30个糯米饼，导致肠子被完全堵死的病人，令人印象深刻。
- </p>
- <p>
-  这医生决定用这个病例，去提醒其他病人不能暴饮暴食，但结果听到的第一个问题反而是：“什么牌子的糯米饼这么好吃？”
+  2）CPI同比涨幅创逾10年新低，但环比仅微降0.3%，这种反差的形成主要影响因素是2019年4季度通胀基数较高，造成同比（与去年同期对比）剧烈下降，但环比数据（月度对比）波动微小。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -89,7 +77,7 @@
   </div>
  </center>
  <p>
-  都来医院了，也坐在医生面前了，但第一关心的问题居然是：如何能更好的满足自己的口腹之欲。
+  两个原因来看，2019年4季度基数较高是影响10月通胀同比数据创出新低的主要原因。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -104,22 +92,7 @@
   </div>
  </center>
  <p>
-  放纵饮食的结果，代价也是残酷的，肥胖已经成了很多年轻人的严重问题。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  因为长期饮食不规律，就容易患上消化系统疾病，饥饿又会导致胃酸高，从而刺激胃壁形成胃炎，长期饥一顿饱一顿的话，还可能进一步形成胃溃疡等更严重的疾病。另外，因为一顿饭大吃大喝，吃成了急性胃扩张，这样的病例也越来越常见。如果有基础性疾病，还会诱发一些严重的并发症，譬如诱发胰腺炎。
+  通胀下行有利于汇率（减少进口），却不利于债务。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -135,7 +108,7 @@
  </center>
  <p>
   <strong>
-   2、放纵玩欲：手机不离身
+   02 人民币制约有所减轻
   </strong>
  </p>
  <center>
@@ -150,13 +123,8 @@
    </center>
   </div>
  </center>
- <p style="text-align:center">
-  <strong>
-   <img alt="过度玩手机带来的危害不容忽视。" src="https://img2.secretchina.com/pic/2019/7-12/p2466092a432219336-ss.jpg" style="height:337px; width:600px"/>
-  </strong>
-  <br>
-   过度玩手机带来的危害不容忽视。
-  </br>
+ <p>
+  1）内通胀因素。CPI同比数据得到控制，货币政策制约有所下降。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -171,7 +139,7 @@
   </div>
  </center>
  <p>
-  很多中国人，早上醒来第一件事是刷朋友圈；出门在外，若没带手机就焦躁不安；朋友聚会时，只见每个人都在低头玩手机……这已经是司空见惯的事。
+  2）外汇率因素。自5月末开始，人民币货币政策收紧，导致热钱套息流入，驱动汇率升值。至11月份，人民币一度升值至6.5区间。价格变动本身是影响预期最直接的因素，这有利于改善人民币汇率预期，刺激海外资金惯性流入，惯性流入可以降低中美息差上的要求（已经从250基点降至235基点），有利于人民币货币政策放松。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -186,7 +154,11 @@
   </div>
  </center>
  <p>
-  刷到凌晨两三点还欲罢不能的抖音或微博、一追就停不下来的肥皂剧、一玩就停不下来的游戏，每个人总是说看完这集就是最后一集，玩完这游戏就是最后一次，可是最后一集又一集，一次又一次，欲望让你内心成瘾。
+  从
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  央行表态来看，11月6日，央行副行长刘国强在答记者问时确认：“资金价格总体呈下降趋势，要有确定性的预期”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -201,7 +173,7 @@
   </div>
  </center>
  <p>
-  一份在2016年发布的《智能手机依赖度调查报告》显示，12.4%用户每天使用手机超过6小时。有48.3%用户超过0点还在用手机，甚至有8.3%的人超过凌晨1点还在玩手机！经过了几年，情形只会更严重，不会有缓解的迹象。
+  表态确认了中国央行正试图放宽货币政策。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -216,7 +188,7 @@
   </div>
  </center>
  <p>
-  然而，过度依赖手机带来的危害不容忽视。
+  背后是人民币汇率已超央行预期升值，10月份通胀同比创11年新低也有利于释放人民币货币政策空间。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -231,37 +203,7 @@
   </div>
  </center>
  <p>
-  眼科医生指出，过度依赖手机，容易导致眼睛疲劳，诱发眼部疾病，特别是在阴暗环境看手机，例如睡前玩手机，对身体危害更大，容易造成眼镜度数不可逆的加深，甚至进一步诱发青光眼。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  血管外科医生也指出，长时间维持同一坐姿玩手机太久，容易使下肢血管内形成血块，很有可能诱发急性心血管疾病，比较常见的就是诱发急性肺栓塞。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  手机当然是生活与工作的好工具、好伙伴，但过分沉迷，会让人难以自拔！
+  中国央行的放水意向没有问题，但国际收支平衡挤压之下，放水空间存疑。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -277,7 +219,7 @@
  </center>
  <p>
   <strong>
-   3、放纵熬夜：想睡就睡，不想睡就通宵
+   03 双重掣肘
   </strong>
  </p>
  <center>
@@ -293,25 +235,11 @@
   </div>
  </center>
  <p>
-  2019年，一份中国睡眠指数报告显示：70后最常睡前看书，80后最常失眠，90后睡得最晚。90后睡眠时间平均为7.5小时，六成以上觉得睡眠不足。95后大学生比例更高，他们沉迷于睡前玩手机，通过熬夜释放压力，“总在熬夜的愉悦感和白天的负罪感之间徘徊”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="中国 纵欲 食欲 性欲" src="https://img2.secretchina.com/pic/2019/7-12/p2466102a785299486-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   放纵熬夜，对身体健康有很大伤害。
-  </br>
+  包括中国在内新兴市场经济体总会受经济和
+  <span href="https://www.secretchina.com/news/gb/tag/金融" target="_blank">
+   金融
+  </span>
+  双重掣肘。在多年来全球流动性宽松的背景下，新兴经济体外债水平都在不断上升。多数新兴市场经济体为出口导向，贸易依存度较高，疫情冲击打击本国优势产业，引发外需萎缩，可能加剧本币的贬值预期，会进一步增大了外债偿还压力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -326,7 +254,7 @@
   </div>
  </center>
  <p>
-  很多时候我们总是说，熬夜加班会猝死，可是大数据显示的现实是，这些人大部分根本不是因为工作熬夜，而是因为玩手机、玩游戏内心成瘾，欲罢不能地一晚又一晚地熬着漫长的夜。或许他们会在凌晨3点转发遥远城市有人猝死的新闻，可是却不知自己也身处危险边缘，这是很多人的生存现状。
+  缓解问题需要进行利率上的拉升和通胀上的控制（否则就会导致进口增多，外汇流失）。这是土耳其、阿根廷等国家的本币利率都很高的原因，这也是中国自2020年5月末以来货币政策收紧的原因。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,7 +269,7 @@
   </div>
  </center>
  <p>
-  放纵熬夜，给人带来了什么？伤害！
+  （跨境）金融的掣肘让新兴经济体有加息和抑制通胀的压力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -356,7 +284,7 @@
   </div>
  </center>
  <p>
-  2017年诺贝尔生理学或医学奖授予了3名美国科学家，他们发现的生物钟运行机制，进一步揭示熬夜破坏人体正常生物钟节奏，而对身体健康的伤害。
+  但多年的贸易依赖形成的内需低迷、产能过剩以及天量内债等因素，又需要以利率下行稳定经济、以全民通胀消化债务。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -371,7 +299,7 @@
   </div>
  </center>
  <p>
-  熬夜，除造成免疫系统抗病能力降低之外，还会增加人群罹患心脏病、呼吸系统疾病、糖尿病、乳腺癌、抑郁、中风等病的风险。
+  经济掣肘让新兴经济体有降息和推升通胀的压力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -386,7 +314,7 @@
   </div>
  </center>
  <p>
-  《国际时间生物学》杂志曾于2018年4月发布一篇重量级文章《英国生物样本库中，作息与发病率和死亡率的关系》指出：相比于早睡早起的人，晚上不睡、早晨不起，或起床困难的“夜猫子”们，“早死”的风险更高。其中晚上不睡早晨起不来的人，比早睡早起的人死亡风险高出10%。
+  新兴经济体的两难！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -402,11 +330,7 @@
  </center>
  <p>
   <strong>
-   （四）放纵
-   <span href="https://www.secretchina.com/news/gb/tag/性欲" target="_blank">
-    性欲
-   </span>
-   ：无知、不安全的性行为
+   04 中国能破局吗？
   </strong>
  </p>
  <center>
@@ -422,7 +346,7 @@
   </div>
  </center>
  <p>
-  据报导，2018年5月，投放在上海同济大学的爱滋病匿名检测包自动贩卖机，仅6个小时即销售一空。2017年，清华大学等11所高校，均在24小时内就宣告完售。
+  2020年的1-5月份，中国央行选择了稳定经济，在两难问题上，很显然这会面临金融掣肘。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -437,7 +361,7 @@
   </div>
  </center>
  <p>
-  20～24岁年龄组的检测情况发现，在北京的多个门诊，每检测出一百个爱滋病人，学生感染率在5%左右。而校外青年，该年龄段每一百个人感染率更高达百分之十几。
+  可以发现1-5月，人民币利率下行稳经济导致跨境金融遭受到较强压力，人民币汇率一路贬值，中美息差（贬值压力的数据量化）一路扩大。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -452,7 +376,52 @@
   </div>
  </center>
  <p>
-  数字背后反映的是，当代青年和青年学生不正确的性观念。2017年，据中国大陆有关调查报告显示，20.3%的大学生表示曾发生过性行为，但只有不足六成的大学生表示接受过性教育。5.3%的大学生有性行为但从不避孕，其中36.4%的大学生认为没有必要。
+  中国央行一再强调资金要进实体，对资金流入严防死守。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  一季度中国CPI超过5%，如果大量资金涌入实体显然会将通胀推得更高，但央行仍然要求资金要进实体，目的之一就是防范对跨境金融产生压力，这又会形成反向掣肘。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  而6-11月，央行选择的是稳金融，中国无风险利率迅速上行，十年国债收益率一升再升，两难问题将面临实体的掣肘。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这必然会带来经济上、内债上的压力。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -471,7 +440,7 @@
   </ins>
  </center>
  <p>
-  过于放纵的性行为，已经让许多沉迷其中的年轻人陷入深渊！
+  2020年11月6日上午10时，中国国务院政策例行会议，其中提及前三季度，商业银行实现净利润（银行的增量）15000亿元，但前三季度GDP增量（全部实体的增量）为9941亿人民币。所有实体增量加起来，比商业银行增量（利润）还少了5000亿。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -485,11 +454,113 @@
    </center>
   </div>
  </center>
- <p style="text-align: center;">
-  <img alt="放纵食欲，容易患上消化系统疾病。" src="https://img2.secretchina.com/pic/2019/7-12/p2466082a8780115-ss.jpg" style="height:337px; width:600px"/>
-  <br>
-   放纵食欲，容易患上消化系统疾病。
-  </br>
+ <p>
+  即中国实体经济埋头苦干三个季度，一算还不够商业银行利息。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  强调一下，实体投入的是人财物，而不只是财（银行贷款只是财）；商业银行也只是金融机构之一而不是全部。更夸张的是，商行利润1.5万亿，这是在金融对实体让利1.25万亿之后实现的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这种背景之下，如果没有较高的通胀来稀释实体债务压力，债务风险已经十分严峻，贷款应延尽延政策（风险推后）一旦结束，恐怕马上就会爆发风险。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  或正是因为风险如此逼近，在跨境金融风险有所缓解的情况下，中国央行正试图放宽货币政策。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  中美十年国债利差已经从10月中旬的250基点附近下行至235基点，显示出稳金融（稳外债）向稳经济（稳内债）切换的迹象。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但意外发生！随着辉瑞疫苗重大突破，十年美债收益率迅速飙高，目前已经创出自2020年以来的新高。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  这种情况影响之下，中国无风险利率是否还具有下行空间又成疑问！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  如果不能顺利放松货币政策，如果不能驱动通胀上行，内债压力如何破局？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -505,7 +576,7 @@
  </center>
  <p>
   <strong>
-   （五）放纵馋欲：满足于甜、咸、辣的重口味
+   小结：
   </strong>
  </p>
  <center>
@@ -521,7 +592,7 @@
   </div>
  </center>
  <p>
-  臭豆腐、卤鸡蛋、宫保鸡丁、辣子鸡、水煮牛肉……这些国人最爱的“重口味”食物，往往是高盐、高油、高糖、过辣。
+  经济和（跨境）金融双重掣肘之下：内债要么通胀稀释，要么违约刚爆；都将遭遇（跨境）金融掣肘；外债要么加息稳定，将遭遇经济掣肘；要么违约刚爆，将遭遇金融掣肘。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -536,7 +607,7 @@
   </div>
  </center>
  <p>
-  2012年2月，发表在国际顶级学术刊物《Nature》杂志的一篇题为《公共卫生：糖的毒性真相》（Public health:The toxic truth about sugar）的文章指出：糖就像烟草和酒精一样。如果长期摄入高糖饮食，将会到头到脚影响全身健康：增加心脏病风险、容易发胖、毁坏牙齿。
+  破局已失去了可能性，风险爆发是一种必然。而CPI同比创出10年新低，迅速放大了内债压力！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -551,7 +622,7 @@
   </div>
  </center>
  <p>
-  2017年英国医学杂志《柳叶刀．全球健康》给出的一组调查数据显示：在中国，五分之四被调查群体每日平均盐摄入量12.5g，是中国膳食指南规定（6g）的两倍多。研究认为，中餐重盐的特质直接与健康风险挂钩，也发出“中国菜太咸了”的提醒。而过量摄入盐，正是高血压、心脏病、肾病、中风等疾病的重要成因之一。
+  END
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -565,119 +636,27 @@
    </center>
   </div>
  </center>
- <p>
-  专家指出，吃得太辣不仅使循环血量剧增，心跳加快，心搏过速，也可能妨碍原有的心脑血管病及肺内病变的康复。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   （六）放纵懒欲：躺着不动，不锻练
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  能坐着绝不站着，能躺着绝不坐着。懒，是多少自我调侃“废柴”年轻人的常态。美国独立战争时期重要领导人本杰明．富兰克林曾说过，“懒惰，像生锈一样，比操劳更能消耗身体；经常用的钥匙总是亮闪闪的。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  世界卫生组织2018年发布在《柳叶刀．全球卫生》杂志上一项研究显示，2016年全球超过1/4的成年人缺乏锻练，尤其是高收入国家的成年人“最不活跃”。缺乏体育锻练的人群，罹患心血管疾病、糖尿病、痴呆症和癌症等风险更高。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  运动不足会增加疾病的风险，这是有大量证据的，如心脑血管疾病、糖尿病、肥胖症、某些癌症，都和运动不足有着密切的关系。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  很多年轻人仗着自己的身体好，糟蹋自己的身体，无限地放纵自己的欲望，可是现实最终会让你付出惨重的代价。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  种种
-  <span href="https://www.secretchina.com/news/gb/tag/纵欲" target="_blank">
-   纵欲
+ <p style="margin-bottom:12px;">
+  <hr style="border-top: 1px dashed  ;" width="100%"/>
+  <br/>
+  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
   </span>
-  过度的情况，也正是执政当局乐见的情况，当人们都沉迷于其中时，便不再关心国家与社会的重大事件，这些掌权的人也能更加为所欲为。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  你对中国日益沉迷于物欲的现象，是否有自己的观察与体会呢？也欢迎在底下留言，与读者分享。
+  ：每位
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+  <span href="/kzgd/subscribe.html" target="_blank">
+   荣誉会员
+  </span>
+  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+  <center>
+   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+   </span>
+  </center>
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -692,7 +671,7 @@
   </center>
   <center>
    <div>
-    <div id="txt-mid2-t22-2017" style="display: block;  max-height: 351px;  overflow: hidden;">
+    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
      <div id="SC-21xx">
      </div>
      <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
@@ -707,13 +686,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938992.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938992.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/938992.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/07/08/938992.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952237.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952237.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/952237.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/12/952237.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/938992.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/952237.md' width='0px' height='0px'/>
