--- a/pages/nf4514/n12543905.md
+++ b/pages/nf4514/n12543905.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11·12】参院开通邮寄选票举报热线" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/09/ron-johnson-1200x800-600x400.jpg"/>
+<div><img alt="【大选更新11·12】参院开通举报热线" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/09/ron-johnson-1200x800-600x400.jpg"/>
 <div class="caption">
  美国参议院国土安全与政府事务委员会主席罗恩·约翰逊宣布，将开通邮寄选票举报热线。图为约翰逊资料照。(Win McNamee/Getty Images)
 </div></div><hr/>
@@ -289,7 +289,10 @@
  <ok href="https://www.epochtimes.com/gb/20/11/11/n12541288.htm" rel="noopener noreferrer" target="_blank">
   这里
  </ok>
- 。#
+ 。
+</p>
+<p>
+ 责任编辑：叶紫微
 </p>
 </div>
 <hr/>
