--- a/pages/p2/952317.md
+++ b/pages/p2/952317.md
@@ -1,4 +1,4 @@
-### 因身体健康原因 安倍晋三拟辞日本首相(图)
+### 美国大选敏感时刻 网曝中南海官员倒戈(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="安倍晋三 日本 首相" src="https://img3.secretchina.com/pic/2020/8-28/p2764342a154737425-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="中共会议，示意图" src="https://img3.secretchina.com/pic/2020/4-29/p2680612a478662908-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   日本首相安倍晋三（图片来源：Kiyoshi Ota/Pool/Getty Images）
+   中共会议，示意图（图片来源:GREG BAKER/AFP via Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,74 +21,62 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  忧心中国会回到文革时期！前中国黑龙江省鸡西市副市长李传良，真名退出共产党](http://141.164.51.119:10000/videos/news/quit01.html)
-
-#### [ 🔥  走出文化亡国第十集 伪专家和造新闻 － 中共宣传机器愚弄民众的两个“致命暗器”](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
-
-#### [ 🔥  共和党大会受邀致辞 陈光诚：中共是人类敌人](http://141.164.51.119:10000/videos/news/cgc.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年8月28日讯】（看中国记者闻天清报导）日前刚成为
+  【看中国2020年11月12日讯】（看中国记者林中宇综合报导）美国民主党候选人拜登早前自行宣布胜选，但事实上
   <strong>
-   日本
+   美国大选
   </strong>
-  历史上连续执政时间最长的
+  结果未定，形势反而有利于
   <strong>
-   首相
+   川普
   </strong>
-  ，
+  。中共总书记
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/安倍晋三" target="_blank">
-    安倍晋三
+   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
+    习近平
    </span>
   </strong>
-  因身体健康原因避免影响国政，决定辞去首相职务，并留任至选出日本新首相。
+  并未向拜登祝贺，中共官方对此也表态微妙。中共党内动向引人关注。中国民运人士王丹12日说，一位曾在
+  <strong>
+   中南海
+  </strong>
+  核心部门工作30几年的朋友，罕见发声呼吁美国认清中共的邪恶。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  英国BBC新闻引述
-  <span href="https://www.secretchina.com/news/gb/tag/日本" target="_blank">
-   日本
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
   </span>
-  执政党自民党多位官员透露消息称，安倍晋三将以身体健康为由辞去日本首相职务。此前媒体披露安倍晋三近期2次前往医院，其中一次在医院停留时间接近8个小时，引起各界对其健康情况的关注，但日本政府并没有透露安倍晋三就医的原因。
+  民运人士王丹12日在脸书发文说，“我有一位长辈朋友，在中共国务院发展研究中心工作了30年，在中共核心机关历经几朝，见证了中共几十年的内部决策和施行。”
  </p>
  <p>
-  安倍晋三过去曾公开承认，从高中学生时代开始，他就患有溃疡性结肠炎。2007年，由于此病发作还导致他不得不辞去
-  <span href="https://www.secretchina.com/news/gb/tag/首相" target="_blank">
-   首相
-  </span>
-  职务。
+  王丹的这位朋友关于美国未来的对华政策，他在推特上给王丹留言：“我在中共最高决策部门浸淫30多年，深谙中共。”“几年前我就说，如果美国政界意识不到中共之邪恶，如果美国政界没有将中共视为你死我活的对手（绝不仅是对手），如果美国民众没有杀敌一千自损八百的意志，（并非和中国合作共赢），那美国、甚至全世界将为今天的短视付出难以承受的代价。”
  </p>
  <p>
-  日本执政党自民党官员曾公开宣称，安倍晋三没有健康问题，试图以此来消除外界对安倍晋三辞职的担忧。
+  王丹说，这番话是这位朋友在中共核心部门工作几十年积累的心得，真希望西方国家，尤其是美国政界，能够听到他的忠告。
+  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
+   川普
+  </span>
+  (特朗普)和习近平，究竟是谁，对全球民主构成更大的威胁？请大家自己判断。
+ </p>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/11-12/p2816911a904502216-ss.jpg"/>
+  <br>
+   中国民运人士王丹说，一位曾在中南海核心部门工作30几年的朋友，罕见发声呼吁美国认清中共的邪恶。（图片来源：脸书）
+  </br>
  </p>
  <p>
-  报导引述路透社8月25日消息，一名安倍晋三助手透露，
-  <span href="https://zh.wikipedia.org/wiki/%E5%AE%89%E5%80%8D%E6%99%8B%E4%B8%89" target="_blank">
-   安倍晋三
-  </span>
-  或将结束自己的日本首相任期。自民党税务小组组长甘利明表示，首相不会解散日本国会，目前也不会有临时选举。
- </p>
- <p>
-  尽管在8月24日首相任期内创下日本历史上连续执政时间最长的纪录，但安倍晋三因
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
-  </span>
-  防疫措施不力，在日本国内遭到批评，他的支持率也在不断下降。
+  王丹的这位朋友还在推特发文说：“我几乎见证了中国所谓的经济奇迹的全程，有机会我将向大家讲述世界第二大经济体—-今日中国的前世今生。是该让人们（特别是西方政届）梦醒的时候了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -103,7 +91,10 @@
   </div>
  </center>
  <p>
-  如果安倍晋三决定辞去日本首相职务，他不会立即离任，而是继续担任看守首相。若是他本人实在无法履行首相职责，按照日本宪法可由其内阁其他大臣临时担任代理首相。目前临时代理首相排名第一的是日本副首相兼财务大臣麻生太郎，其次是内阁官房长官菅义伟。
+  <span href="https://zh.wikipedia.org/wiki/%E5%94%90%E7%B4%8D%C2%B7%E5%B7%9D%E6%99%AE" target="_blank">
+   川普
+  </span>
+  政府，被认为是美国数十年来，首度认识到中共之邪，并将中共和中国人民分开的政府。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -118,7 +109,7 @@
   </div>
  </center>
  <p>
-  台湾中央社8月28日报导，在接受新闻媒体采访时，日本前自民党干事长细田博之称，安倍晋三有致电给他表示要辞去日本首相职务，由于是身体健康恶化的原因，这也是不可避免的事情。
+  11月10日，美国国务卿蓬佩奥在里根研究所（Ronald Reagan Institute）发表演讲。在演讲中，他称中共是“马克思列宁主义怪兽”，是自由世界的首要威胁。他希望帮助中国人民推倒网络防火墙，在没有中共的影响下，让中国人民自己决定中国的未来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,7 +124,7 @@
   </div>
  </center>
  <p>
-  在8月16日至8月18日，安倍晋三曾休假3天，基本没有外出，唯有8月17日前往庆应大学附设医院接受检查，停留近8个小时。8月24日，安倍晋三再次前往医院，这次停留约3个半小时。当时，安倍晋三解释，此行是了解8月17日检查结果，并增加了身体检查项目。
+  蓬佩奥还引用前美国总统里根关于苏联的言论，预测中国最终将终结一党专制：“最终中国人民，就像苏联人民一样，将最终决定这个国家的历史进程”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -148,7 +139,7 @@
   </div>
  </center>
  <p>
-  2019年12月，在电视节目上谈及他的接班人时，安倍晋三首次点名自民党政调会长岸田文雄、外相茂木敏充、官房长官菅义伟和厚生劳动大臣加藤胜信等4人。
+  他指出，川普政府已成功扭转对中共政策：“对中共形成的新共识，是美国的实力和坦率态度下的历史性结果。事实上，现在整个政治领域都认识到此事的紧迫性。这表明川普政府已做出成功的重要转变，为美国国家安全，乃至全人类自由。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +158,7 @@
   </ins>
  </center>
  <p>
-  此外，防卫大臣河野太郎曾公开宣布，他有竞选自民党总裁的意愿，经济大臣西村康稔在网络节目也表明自己未来想竞选日本首相的意愿。
+  蓬佩奥表示，川普政府上任以来取得了重大成就，比如摧毁了伊斯兰国（ISIS），恢复了实质威慑力，“这些聚集起来的力量，是美国针对当今世界自由头号威胁中共的政策基础。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +173,7 @@
   </div>
  </center>
  <p>
-  日本产经新闻报导，安倍今天内阁会议结束后，在首相官邸（首相办公厅舍）和副首相兼财务大臣麻生太郎会面，两人1对1会谈约35分钟，对今后的政局交换意见。
+  美国飞天大学教授、知名评论人章天亮表示，这说明美国把这些事平定之后，就要把精力集中起来对准中共政权。蓬佩奥讲话会让习近平很长时间睡不着觉。因为这对中共来说是很可怕的事情。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -197,7 +188,10 @@
   </div>
  </center>
  <p>
-  《纽约时报》称，尽管任期内获得了东京2020年夏季奥运会的主办权，但因武汉肺炎疫情快速蔓延至全球的影响，被迫延迟到明天夏季，届时安倍晋三无法以首相身份主持开幕式及致词。他任内曾创下的“安倍经济学”成就，也因武汉肺炎防疫措施不力严重冲击日本经济，导致恐亏一篑。
+  <span href="https://www.secretchina.com/news/gb/tag/美国大选" target="_blank">
+   美国大选
+  </span>
+  爆出民主党舞弊丑闻，川普阵营启动法律诉讼，大选结果仍悬而未决。有身在纽约的红二代对美国大选爆出的欺诈案非常愤慨，对美媒表示全力支持川普，“因为他反共”。而据中国前资深记者高瑜向美媒透露，中共红二代们盼望中国变天，压倒性地支持川普总统连任，只有川普才能制约、挫败中共当局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,7 +223,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -261,13 +255,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/944420.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/944420.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p9/944420.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/28/944420.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/952317.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/952317.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/952317.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/12/952317.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p9/944420.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/952317.md' width='0px' height='0px'/>
